@@ -165,7 +165,7 @@ log.dir = /dspace/log
 # Where to temporarily store uploaded files
 upload.temp.dir = /dspace/upload
 
-# Maximum size of uploaded files in bytes, must be positive
+# Maximum size of uploaded files in bytes, negative setting will result in no limit being set
 # 512Mb
 upload.max = 536870912
 
